# ovalbee-py

./: .env.example  .gitignore  pyproject.toml
.github/workflows/: deploy_pypi.yml
ovalbee/: __init__.py
ovalbee/api/: _api.py  annotation_api.py  api.py  asset_api.py  base_api.py  collection_api.py  module_api.py  storage_api.py  task_api.py
ovalbee/config/: __init__.py
ovalbee/config/extras/: __init__.py  extras.py
ovalbee/config/extras/render/: __init__.py
ovalbee/config/extras/video/: __init__.py
ovalbee/core/: annotation.py  asset.py  collection.py  space.py
ovalbee/domain/types/: __init__.py  annotation.py  asset.py  base.py  collection.py  file.py  s3.py  space.py
ovalbee/dto/: annotation.py  asset.py  base.py  collection.py  file.py  s3.py  space.py
ovalbee/io/: __init__.py  credentials.py  decorators.py  env.py  fs.py  network_exceptions.py  url.py
ovalbee/ops/: __init__.py  pipeline.py
ovalbee/ops/annotation/: __init__.py  service.py
ovalbee/ops/convert/: base.py  convert.py  sly.py  yolo.py
ovalbee/ops/converters/: boxes.py  yolo.py
ovalbee/ops/render/: sly.py  visualize.py
ovalbee/ops/transforms/: registry.py
tests/: _temp_test_design.py  _test_entities_memory.py  _test_entities_performance.py  debug.py  test_annotations_api.py  test_assets.py  test_assets_api.py  test_collection.py  test_collection_api.py  test_converter.py  test_design.py  test_integration_workflow.py  test_render_annotations.py  test_storage_api.py
