[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ovalbee"
version = "0.0.2"
authors = [
  { name="Ovalbee", email="support@ovalbee.com" }
]
description = "Ovalbee python SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioboto3>=15.4.0",
    "botocore>=1.40.49",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "requests_toolbelt",
    "httpx",
    "types-aiobotocore-s3",
    "aioboto3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "boto3",
    "minio",
]
image = [
    "numpy>=2.2.6",
]
