[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ovalbee*"]
exclude = ["supervisely*", "tests*", "examples*", "docs*"]

[project]
name = "ovalbee"
version = "0.0.2"
authors = [
  { name="Ovalbee", email="support@ovalbee.com" }
]
description = "Ovalbee python SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "aioboto3",
    "botocore",
    "requests_toolbelt",
    "httpx[http2]==0.27.2",
    "types-aiobotocore-s3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "boto3",
    "minio",
    "supervisely==6.73.463",
]
image = [
    "numpy>=2.2.6",
]
